8286314: Trampoline not created for far runtime targets outside small CodeCache

Backport-of: bf0623b11fd95f09fe953822af71d965bdab8d0f